--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@shopify/react-native-skia": "^1.0.2",
+    "bezier-js": "^6.1.4",
+    "flubber": "^0.4.2",
+    "points-on-curve": "^1.0.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "^2.15.0",
-    "react-native-reanimated": "^3.8.0"
+    "react-native-reanimated": "^3.8.0",
+    "react-native-svg": "^15.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
